# mlops

./: .gitignore  pyproject.toml
task-1/: app.py  model.py
task-10/: Матрица рисков.docx
task-2/: app.py  model.py
task-3/: app.py  model.py
task-4/: app.py  model.py  train.py
task-5/: Dockerfile  app.py  categorical_feature_info.json  compose.yml  model.py  numerical_feature_info.json  pipe.pkl  train.py
task-6/: Dockerfile-client  Dockerfile-server  client.py  client.ts  compose.yml  models.py  package.json  pipe.pkl  server.py  train.py  tsconfig.json
task-6/views/: index.handlebars
task-6/views/layouts/: main.handlebars
task-8/: fetch.py  model-settings.json  package-lock.json  package.json  predict.js  train.py  transformers.py
task-9/: README.md  Карта планирования.docx
