[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Derbin Dmitry <d.derbin@kryptonite.ru>"]
readme = "README.md"

[tool.poe.tasks]
task-1 = "streamlit run task-1/app.py"
task-2 = "streamlit run task-2/app.py"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.2"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
